# launch-calendar

./: Dockerfile  README.md  pyproject.toml
launch_calendar/: main.py
launch_calendar/lib/: api.py  models.py
launch_calendar/lib/sources/: __init__.py  everyday_astronaut.py  nasa_space_flight.py  what_about_it.py
launch_calendar/static/: calendar.js  script.js  sources.js
launch_calendar/templates/: index.html
