[tool.poetry]
name = "launchcalendar"
version = "0.7.0"
description = ""
authors = ["Josh <josh.nicholls@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
selenium = "^4.21.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
